First pass at removing OpenShift specific material.
- All content is removed or replaced with manageiq/cfme specifics.
- Unable to change links to assets, particuarly in the header, at this
  time.  These will need to be extracted out into perhaps a separate
  HAML template.

--- a/_templates/document.html.haml
+++ b/_templates/document.html.haml
@@ -38,7 +38,7 @@
       %ul
         %li
           %a(href='http://openshift.github.io')
-            %img(src='images/logo.png' alt='OpenShift Origin')
+            %img(src='images/logo.png' alt='ManageIQ')
         %li
           %a(href='index.html') Documentation Home
 
