Update to AsciiBinder v0.1.0

--- a/_stylesheets/asciibinder.css
+++ b/_stylesheets/asciibinder.css
@@ -1,13 +1,48 @@
-.breadcrumb {
-  margin: 0;
-  padding: 3px 0 20px;
+/* ------------------------------------------------------------
+Image: "Spin" https://www.flickr.com/photos/eflon/3655695161/
+Author: eflon https://www.flickr.com/photos/eflon/
+License: https://creativecommons.org/licenses/by/2.0/
+---------------------------------------------------------------*/
+.attribution {
+  text-align: center;
+  position: relative;
+  bottom: -20px;
+}
+.attribution .btn {
+  color: #808080;
+  color: rgba(175,175,175, .65);
+  font-size: 11px;
+}
+.attribution .btn:hover {
+  text-decoration: none;
+  color: #aaa;
+}
+.popover-content {
+  font-size: 12px;
+  line-height: 1.3;
+  font-weight: normal;
 }
 
-@media screen and (min-width: 768px) {
-  .breadcrumb {
-    border-bottom: 1px solid #e7e7e7;
-    padding-top: 0;
+@media screen and (max-width: 980px) {
+  body {
+    margin-bottom: 200px;
   }
+  footer {
+    text-align: center;
+  }
+  footer .text-right {
+    text-align: center !important;
+  }
+  #footer_social .first {
+    margin-left: 0;
+  }
+  #footer_social > a {
+    top: 24px;
+  }
+}
+
+.fa-inverse:hover {
+  color: #ccc;
 }
 
 .collapse a.active {
@@ -118,7 +153,9 @@ h6 > a.anchor:hover {
 
 .nav-header ul li a {
   display: block;
-  padding: 5px 20px 5px 19px;
+  padding: 5px 20px 5px 25px;
+  font-size: 13px;
+  font-weight: normal;
 }
 
 .nav-sidebar .fa {
@@ -133,6 +170,10 @@ h6 > a.anchor:hover {
 
 .nav-sidebar li a:hover {
   color: #000;
+}
+
+.nav-sidebar ul li ul.nav-tertiary li a {
+  padding-left: 50px;
 }
 
 .nav-sidebar > li > a {
@@ -320,7 +361,7 @@ table.tableblock #preamble > .sectionbody > .paragraph:first-of-type p { font-si
 .exampleblock > .content h1, .exampleblock > .content h2, .exampleblock > .content h3, .exampleblock > .content #toctitle, .sidebarblock.exampleblock > .content > .title, .exampleblock > .content h4, .exampleblock > .content h5, .exampleblock > .content h6 { line-height: 1; margin-bottom: 0.625em; }
 .exampleblock > .content h1.subheader, .exampleblock > .content h2.subheader, .exampleblock > .content h3.subheader, .exampleblock > .content .subheader#toctitle, .sidebarblock.exampleblock > .content > .subheader.title, .exampleblock > .content h4.subheader, .exampleblock > .content h5.subheader, .exampleblock > .content h6.subheader { line-height: 1.4; }
 .exampleblock.result > .content { -webkit-box-shadow: 0 1px 8px #e3e3dd; box-shadow: 0 1px 8px #e3e3dd; }
-.sidebarblock { border-style: solid; border-width: 1px; border-color: #e3e3dd; margin-bottom: 1.25em; padding: 1.25em; background: #fafaf9; -webkit-border-radius: 4px; border-radius: 4px; }
+.sidebarblock { border-style: solid; border-width: 1px; border-color: #e3e3dd; margin-top: -1.0em; margin-bottom: 1.6em; padding: .5em; background: #F1F3F5; -webkit-border-radius: 4px; border-radius: 4px; overflow-x: auto; }
 .sidebarblock > :first-child { margin-top: 0; }
 .sidebarblock > :last-child { margin-bottom: 0; }
 .sidebarblock h1, .sidebarblock h2, .sidebarblock h3, .sidebarblock #toctitle, .sidebarblock > .content > .title, .sidebarblock h4, .sidebarblock h5, .sidebarblock h6, .sidebarblock p { color: #333333; }
@@ -392,7 +433,6 @@ ul.checklist li > p:first-child > input[type="checkbox"]:first-child { position:
 ul.inline { margin: 0 auto 0.625em auto; margin-left: -1.375em; margin-right: 0; padding: 0; list-style: none; overflow: hidden; }
 ul.inline > li { list-style: none; float: left; margin-left: 1.375em; display: block; }
 ul.inline > li > * { display: block; }
-ul p{ margin-bottom: 0px; }
 .unstyled dl dt { font-weight: normal; font-style: normal; }
 ol.arabic { list-style-type: decimal; }
 ol.decimal { list-style-type: decimal-leading-zero; }
@@ -401,7 +441,6 @@ ol.upperalpha { list-style-type: upper-alpha; }
 ol.lowerroman { list-style-type: lower-roman; }
 ol.upperroman { list-style-type: upper-roman; }
 ol.lowergreek { list-style-type: lower-greek; }
-ol p { margin-bottom: 0px; }
 .hdlist > table, .colist > table { border: 0; background: none; }
 .hdlist > table > tbody > tr, .colist > table > tbody > tr { background: none; }
 td.hdlist1 { padding-right: .75em; font-weight: bold; }
@@ -432,6 +471,13 @@ span.footnote a:active, span.footnoteref a:active { text-decoration: underline; 
 .gist .file-data > table { border: none; background: #fff; width: 100%; margin-bottom: 0; }
 .gist .file-data > table td.line-data { width: 99%; }
 div.unbreakable { page-break-inside: avoid; }
+.replaceable { font-style: italic; font-color: inherit; font-family: inherit; }
+.parameter { font-style: italic; font-family: monospace; }
+.userinput { font-weight: bold; font-family: monospace; }
+.envar { font-weight: bold; font-family: monospace; font-size: 90%; }
+.sysitem { font-weight: bold; font-size: 90%; }
+.package { font-weight: bold; font-size: 90%; }
+.filename { font-weight: bold; font-style: italic; font-size: 90%; }
 .big { font-size: larger; }
 .small { font-size: smaller; }
 .underline { text-decoration: underline; }
