Update images and basic index for ManageIQ

--- a/_templates/page.html.erb
+++ b/_templates/page.html.erb
@@ -18,9 +18,9 @@
      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
    <![endif]-->
 
-  <link href="<%= File.join(images_path, "favicon32x32.png") %>" rel="shortcut icon" type="text/css">
-  <!--[if IE]><link rel="shortcut icon" href="<%= File.join(images_path, "favicon.ico") %>"><![endif]-->
-  <meta content="AsciiBinder" name="application-name">
+  <link href="http://manageiq.org/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <!--[if IE]><link rel="shortcut icon" href="http://manageiq.org/images/favicon.ico"><![endif]-->
+  <meta content="ManageIQ Documentation" name="application-name">
   <style type="text/css">
     .navbar-brand {
       padding-top: 5px;
@@ -31,7 +31,7 @@
   <div class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="http://www.asciibinder.org/"><img alt="AsciiBinder" src="<%= File.join(images_path, "asciibinder-logo-horizontal.png") %>"></a>
+        <a class="navbar-brand" href="http://manageiq.org/"><img alt="ManageIQ Documentation" src="http://manageiq.org/images/logo/manageiq-logo-standard.svg"></a>
       </div>
     </div>
   </div>
