More cleanup due to upgrade to AsciiBinder

--- a/_templates/page.html.erb
+++ b/_templates/page.html.erb
@@ -23,7 +23,8 @@
   <meta content="ManageIQ Documentation" name="application-name">
   <style type="text/css">
     .navbar-brand {
-      padding-top: 5px;
+      padding: initial;
+      height: initial;
     }
   </style>
 </head>
