Allow multiple stylesheets

--- a/_templates/page.html.erb
+++ b/_templates/page.html.erb
@@ -9,7 +9,8 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link href="<%= File.join(css_path, "asciibinder.css") %>" rel="stylesheet">
+
+  <%= render("_templates/_css.html.erb", :css_path => css_path) %>
 
    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,12 +22,6 @@
   <link href="http://manageiq.org/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <!--[if IE]><link rel="shortcut icon" href="http://manageiq.org/images/favicon.ico"><![endif]-->
   <meta content="ManageIQ Documentation" name="application-name">
-  <style type="text/css">
-    .navbar-brand {
-      padding: initial;
-      height: initial;
-    }
-  </style>
 </head>
 <body>
   <div class="navbar navbar-default" role="navigation">
