--- a/_stylesheets/asciibinder.css
+++ b/_stylesheets/asciibinder.css
@@ -83,6 +83,11 @@ License: https://creativecommons.org/licenses/by/2.0/
   background-color: none;
 }
 
+.navbar-brand {
+  padding: initial;
+  height: initial;
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   position: relative;
 }
