--- a/_templates/_css.html.erb
+++ b/_templates/_css.html.erb
@@ -1,3 +1,3 @@
-<%- css.each do |sheet| -%>
-  <link href="<%= File.join(css_path, sheet) %>" rel="stylesheet" />
+<%- Dir.glob("_stylesheets/*").sort.each do |sheet| -%>
+  <link href="<%= File.join(css_path, File.basename(sheet)) %>" rel="stylesheet" />
 <%- end -%>
