Article title must be quoted due to trailing colons

--- a/_templates/_manageiq_page.html.erb
+++ b/_templates/_manageiq_page.html.erb
@@ -11,7 +11,7 @@ subgroup_title: <%= subgroup_title %>
 topic_id:       <%= topic_id %>
 topic_title:    <%= topic_title %>
 
-article_title:  <%= article_title %>
+article_title:  "<%= article_title %>"
 
 breadcrumb_group: <%= breadcrumb_group %>
 breadcrumb_topic: <%= breadcrumb_topic %>
